--- a/app/src/main/res/layout/activity_youtube_video_selection.xml
+++ b/app/src/main/res/layout/activity_youtube_video_selection.xml
@@ -10,9 +10,8 @@
         android:id="@+id/videoSelectRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoSelectionPlayer" />
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videoRecyclerView"
