add search history in video selection activity move Room query object to separate file, RoomTableData.kt
fix issue where video selection check view is disappeard
when new query is requested

--- a/app/src/main/res/layout/activity_youtube_video_selection.xml
+++ b/app/src/main/res/layout/activity_youtube_video_selection.xml
@@ -23,6 +23,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/videoSelectRecyclerView" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/historySearchRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:visibility="gone" />
+
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/videoSelectionPlayer"
         android:layout_width="wrap_content"
