--- a/app/src/main/res/layout/activity_youtube_video_selection.xml
+++ b/app/src/main/res/layout/activity_youtube_video_selection.xml
@@ -65,10 +65,11 @@
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/btnRoomCreate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        app:iconGravity="textStart"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/create"
+        android:text="@string/add"
         app:icon="@drawable/ic_baseline_done_48"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
