--- a/app/src/main/res/layout/item_chat_member.xml
+++ b/app/src/main/res/layout/item_chat_member.xml
@@ -5,12 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/image_chatroom_member"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:src="@drawable/ic_baseline_person_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textMemberName"
         android:layout_width="0dp"
+        android:layout_marginHorizontal="8dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:textColor="@color/halfBlack"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/image_chatroom_member"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
