--- a/app/src/main/res/layout/fragment_room_member.xml
+++ b/app/src/main/res/layout/fragment_room_member.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".room.roominfo.RoomMemberFragment">
+    tools:context=".room.lobby.RoomMemberFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/memberRecyclerView"
