--- a/app/src/main/res/layout/activity_youtube_video_selection.xml
+++ b/app/src/main/res/layout/activity_youtube_video_selection.xml
@@ -6,12 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".room.content.videoselection.YoutubeVideoSelectionActivity">
 
+    <Button
+        android:id="@+id/btnShowCurWatchedVideos"
+        android:background="@color/fui_transparent"
+        android:text="최근 시청 영상 리스트 불러오기"
+        android:textColor="@android:color/black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videoSelectRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btnShowCurWatchedVideos" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videoRecyclerView"
