--- a/app/src/main/res/drawable/chat_bubble_right.xml
+++ b/app/src/main/res/drawable/chat_bubble_right.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/chat_bubble_my_message" />
+    <solid android:color="@color/pink" />
     <corners android:topRightRadius="5dp" android:radius="15dp" />
 </shape>
